Fixes: - Fixed **CTA** shapes width size - Fixed **Testimonials** heading size - Centered **NavBar** on small devices

--- a/src/assets/sass/pages/home/_testimonial.scss
+++ b/src/assets/sass/pages/home/_testimonial.scss
@@ -7,6 +7,9 @@
     @include sm {
       font-size: 30px;
     }
+    @include lg {
+      font-size: 40px;
+    }
     font-weight: 900;
   }
 
